# rk3568_projects

./: .gitignore  GIT_LOG.md  README.md  suggest.md
.opencode/skills/git-commit-rules/: SKILL.md
qt_projects/01_qt_led/: Makefile  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
rk3568-camera/: CODE_GUIDE.md  README.md  SOLUTION.md  WORKLOG.md  note.md
rk3568-camera/app/: CMakeLists.txt  buffer_pool.cpp  buffer_pool.h  capture.cpp  capture.h  config.h  detector.cpp  detector.h  frame_ref.h  main.cpp  mainwindow.cpp  mainwindow.h  mpp_encoder.cpp  mpp_encoder.h  perf_monitor.cpp  perf_monitor.h  pts_clock.h  rtsp_server.cpp  rtsp_server.h  segment_recorder.cpp  segment_recorder.h  spsc_queue.h  system_state.h  toolchain.cmake  video_widget.cpp  video_widget.h  watchdog.cpp  watchdog.h
rk3568-camera/buildroot/configs/: rk3568_camera_defconfig
rk3568-camera/scripts/: build.sh  convert_model.sh  deploy.sh
